fixed overflow in results

--- a/frontend/GroceryApplication/src/app/searchsection/searchsection.component.scss
+++ b/frontend/GroceryApplication/src/app/searchsection/searchsection.component.scss
@@ -49,10 +49,10 @@ main {
 }
 
 .thisorthat {
+    height: 100%;
     position: absolute;
     width: 100%;
     border-radius: 0.5rem;
-    overflow-y: scroll;
     &:hover {
         h2 {
             border-color: var(--yellow);
@@ -70,6 +70,7 @@ main {
 
 
 .resultcards {
+    height: 94%;
     width: 100%;
     padding-block: 1rem;
     padding-left: 1rem;
@@ -77,6 +78,9 @@ main {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(1n, 1fr);
     grid-column-gap: 0.75rem;
+    grid-row-gap: 0.75rem;
+    overflow-y: scroll;
+
 }
 
 .categories {
